// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar > Snapshot 1`] = `
.c0 {
  --bezier-alpha-smooth-corners-box-border-radius: 0;
  --bezier-alpha-smooth-corners-box-shadow-offset-x: 0;
  --bezier-alpha-smooth-corners-box-shadow-offset-y: 0;
  --bezier-alpha-smooth-corners-box-shadow-blur-radius: 0px;
  --bezier-alpha-smooth-corners-box-shadow-spread-radius: 0px;
  --bezier-alpha-smooth-corners-box-shadow-color: transparent;
  --bezier-alpha-smooth-corners-box-padding: 0px;
  --bezier-alpha-smooth-corners-box-margin: 0px;
  --bezier-alpha-smooth-corners-box-background-color: transparent;
  margin: var(--bezier-alpha-smooth-corners-box-margin);
  background-color: var(--bezier-alpha-smooth-corners-box-background-color);
  background-image: var(--bezier-alpha-smooth-corners-box-background-image);
  background-size: cover;
  border-radius: var(--bezier-alpha-smooth-corners-box-border-radius);
  box-shadow: var(--bezier-alpha-smooth-corners-box-shadow-offset-x) var(--bezier-alpha-smooth-corners-box-shadow-offset-y) var(--bezier-alpha-smooth-corners-box-shadow-blur-radius) var(--bezier-alpha-smooth-corners-box-shadow-spread-radius) var(--bezier-alpha-smooth-corners-box-shadow-color);
}

.c1 {
  --bezier-avatar-computed-status-gap: var(--bezier-avatar-status-gap);
  position: relative;
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  outline: none;
}

.c1.bordered[data-state="enabled"] {
  --bezier-avatar-computed-status-gap: calc(var(--bezier-avatar-status-gap) + (2 * var(--bezier-alpha-smooth-corners-box-shadow-spread-radius)));
}

@supports (background:paint(smooth-corners)) {
  .c0[data-state="enabled"] {
    padding: var(--bezier-alpha-smooth-corners-box-padding);
    margin: calc(var(--bezier-alpha-smooth-corners-box-margin) + (-1 * var(--bezier-alpha-smooth-corners-box-padding)));
    background: paint(smooth-corners);
    border-radius: 0;
    border-image-source: var(--bezier-alpha-smooth-corners-box-background-image);
    box-shadow: none;
    --smooth-corners: var(--bezier-alpha-smooth-corners-box-border-radius);
    --smooth-corners-shadow: var(--bezier-alpha-smooth-corners-box-shadow-offset-x) var(--bezier-alpha-smooth-corners-box-shadow-offset-y) var(--bezier-alpha-smooth-corners-box-shadow-blur-radius) var(--bezier-alpha-smooth-corners-box-shadow-spread-radius) var(--bezier-alpha-smooth-corners-box-shadow-color);
    --smooth-corners-bg-color: var(--bezier-alpha-smooth-corners-box-background-color);
    --smooth-corners-padding: var(--bezier-alpha-smooth-corners-box-padding);
    --smooth-corners-radius-unit: var(--bezier-alpha-smooth-corners-box-border-radius-type);
  }
}

<div
  aria-label="Name"
  class="c0 c1"
  data-state="disabled"
  data-testid="bezier-react-avatar"
  style="--bezier-avatar-status-gap: -2px; --bezier-alpha-smooth-corners-box-border-radius: 42%; --bezier-alpha-smooth-corners-box-border-radius-type: string; --bezier-alpha-smooth-corners-box-shadow-blur-radius: 0px; --bezier-alpha-smooth-corners-box-shadow-spread-radius: 0px; --bezier-alpha-smooth-corners-box-padding: 0px; --bezier-alpha-smooth-corners-box-margin: 0px; --bezier-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --bezier-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
/>
`;

exports[`Avatar > renders border style 1`] = `
.c0 {
  --bezier-alpha-smooth-corners-box-border-radius: 0;
  --bezier-alpha-smooth-corners-box-shadow-offset-x: 0;
  --bezier-alpha-smooth-corners-box-shadow-offset-y: 0;
  --bezier-alpha-smooth-corners-box-shadow-blur-radius: 0px;
  --bezier-alpha-smooth-corners-box-shadow-spread-radius: 0px;
  --bezier-alpha-smooth-corners-box-shadow-color: transparent;
  --bezier-alpha-smooth-corners-box-padding: 0px;
  --bezier-alpha-smooth-corners-box-margin: 0px;
  --bezier-alpha-smooth-corners-box-background-color: transparent;
  margin: var(--bezier-alpha-smooth-corners-box-margin);
  background-color: var(--bezier-alpha-smooth-corners-box-background-color);
  background-image: var(--bezier-alpha-smooth-corners-box-background-image);
  background-size: cover;
  border-radius: var(--bezier-alpha-smooth-corners-box-border-radius);
  box-shadow: var(--bezier-alpha-smooth-corners-box-shadow-offset-x) var(--bezier-alpha-smooth-corners-box-shadow-offset-y) var(--bezier-alpha-smooth-corners-box-shadow-blur-radius) var(--bezier-alpha-smooth-corners-box-shadow-spread-radius) var(--bezier-alpha-smooth-corners-box-shadow-color);
}

.c1 {
  --bezier-avatar-computed-status-gap: var(--bezier-avatar-status-gap);
  position: relative;
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  outline: none;
}

.c1.bordered[data-state="enabled"] {
  --bezier-avatar-computed-status-gap: calc(var(--bezier-avatar-status-gap) + (2 * var(--bezier-alpha-smooth-corners-box-shadow-spread-radius)));
}

@supports (background:paint(smooth-corners)) {
  .c0[data-state="enabled"] {
    padding: var(--bezier-alpha-smooth-corners-box-padding);
    margin: calc(var(--bezier-alpha-smooth-corners-box-margin) + (-1 * var(--bezier-alpha-smooth-corners-box-padding)));
    background: paint(smooth-corners);
    border-radius: 0;
    border-image-source: var(--bezier-alpha-smooth-corners-box-background-image);
    box-shadow: none;
    --smooth-corners: var(--bezier-alpha-smooth-corners-box-border-radius);
    --smooth-corners-shadow: var(--bezier-alpha-smooth-corners-box-shadow-offset-x) var(--bezier-alpha-smooth-corners-box-shadow-offset-y) var(--bezier-alpha-smooth-corners-box-shadow-blur-radius) var(--bezier-alpha-smooth-corners-box-shadow-spread-radius) var(--bezier-alpha-smooth-corners-box-shadow-color);
    --smooth-corners-bg-color: var(--bezier-alpha-smooth-corners-box-background-color);
    --smooth-corners-padding: var(--bezier-alpha-smooth-corners-box-padding);
    --smooth-corners-radius-unit: var(--bezier-alpha-smooth-corners-box-border-radius-type);
  }
}

<div
  aria-label="Name"
  class="c0 c1 bordered"
  data-state="disabled"
  data-testid="bezier-react-avatar"
  style="--bezier-avatar-status-gap: -2px; --bezier-alpha-smooth-corners-box-border-radius: 42%; --bezier-alpha-smooth-corners-box-border-radius-type: string; --bezier-alpha-smooth-corners-box-shadow-blur-radius: 0px; --bezier-alpha-smooth-corners-box-shadow-spread-radius: 2px; --bezier-alpha-smooth-corners-box-shadow-color: var(--bg-white-high); --bezier-alpha-smooth-corners-box-padding: 4px; --bezier-alpha-smooth-corners-box-margin: 0px; --bezier-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --bezier-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
/>
`;

exports[`Avatar > should have right -2px, bottom -2px style on StatusWrapper 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: var(--bezier-avatar-computed-status-gap,0);
  bottom: var(--bezier-avatar-computed-status-gap,0);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="c1"
    style="--bezier-status-size: 8px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 2px;"
  />
</div>
`;

exports[`Avatar > should have right 2px, bottom 2px style on StatusWrapper when show border 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: var(--bezier-avatar-computed-status-gap,0);
  bottom: var(--bezier-avatar-computed-status-gap,0);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="c1"
    style="--bezier-status-size: 8px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 2px;"
  />
</div>
`;

exports[`Avatar > should have right 4px, bottom 4px style on StatusWrapper when size grater then 72 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: var(--bezier-avatar-computed-status-gap,0);
  bottom: var(--bezier-avatar-computed-status-gap,0);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="c1"
    style="--bezier-status-size: 8px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 2px;"
  />
</div>
`;

exports[`Avatar > should have right 4px, bottom 4px style on StatusWrapper when size grater then 90 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: var(--bezier-avatar-computed-status-gap,0);
  bottom: var(--bezier-avatar-computed-status-gap,0);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="c1"
    style="--bezier-status-size: 14px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 3px;"
  />
</div>
`;

exports[`Avatar > should have right 8px, bottom 8px style on StatusWrapper when size grater then 72 and show border 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: var(--bezier-avatar-computed-status-gap,0);
  bottom: var(--bezier-avatar-computed-status-gap,0);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="c1"
    style="--bezier-status-size: 8px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 2px;"
  />
</div>
`;

exports[`Avatar > should have right 8px, bottom 8px style on StatusWrapper when size grater then 90 and show border 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: var(--bezier-avatar-computed-status-gap,0);
  bottom: var(--bezier-avatar-computed-status-gap,0);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="c1"
    style="--bezier-status-size: 14px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 3px;"
  />
</div>
`;
